--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <input type="submit" value="Entrar">
 
-                    <a href="esquecisenha.html">
+                    <a href="esquecisenha.html" class="botao">
                         Esqueci a senha
                         <span class="material-symbols-outlined">mail</span>
                     </a>
